moved credits to front

--- a/VIMAT_JavaScript/index.html
+++ b/VIMAT_JavaScript/index.html
@@ -51,6 +51,7 @@
                     <a data-role="button" id="calendarButton" href="#calendarPage" data-icon="grid">Calendar</a>
                     <a data-role="button" id="timeTrackerButton" href="#timeTrackerPage" data-icon="gear">Time Tracker</a>
                     <a data-role="button" id="notepadButton" href="#notepadPage" data-icon="info">Notepad</a>
+                    <a data-role="button" id="aboutVimatButton" href="#aboutVimatPage" data-icon="info">about vimat</a>
                     <a data-role="button" id="exitButton" data-icon="delete">Exit</a>
                 </div>
             </div>
@@ -121,6 +122,22 @@
                     <a data-role="button" id="nextNoteButton" data-icon="arrow-r">Next</a>
                     <a data-role="button" id="deleteNoteButton" data-icon="minus">Delete</a>
                     <a data-role="button" id="newNoteButton" data-icon="plus">New</a>
+                </div>
+                <a data-role="button" id="exitNotepadButton" href="#mainMenuPage">Main Menu</a>
+            </div>
+        </div>
+        <div data-role="page" id="aboutVimatPage" data-title="aboutVimatPage">
+            <div data-role="header" id="notepadHeader">
+                <h1>about vimat</h1>
+            </div>
+            <div data-role="content">
+                <div data-role="controlgroup" data-type="horizontal">
+                  <div id="credits">
+                    vimat created by Nick Warner based on works of others:
+                    <br />
+                    <a href="http://jgn.me/">J&eacute;r&ocirc;me Gravel-Niquet</a>.
+                    <br />Rewritten by: <a href="http://addyosmani.github.com/todomvc">TodoMVC</a>.
+                  </div>
                 </div>
                 <a data-role="button" id="exitNotepadButton" href="#mainMenuPage">Main Menu</a>
             </div>
