--- a/VIMAT_JavaScript/index.html
+++ b/VIMAT_JavaScript/index.html
@@ -43,16 +43,20 @@
     <body>
         <div data-role="page" id="mainMenuPage" data-title="VIMAT Main Menu">
             <div data-role="header" id="mainHeader">
-                <h1>VIMAT Main Menu</h1>
+                <h1>Main Menu</h1>
             </div>
             <div data-role="content">
                 <div data-role="controlgroup" id="mainButtonGroup">
                     <a data-role="button" id="listsButton" href="#listsMenuPage" data-icon="check">Lists</a>
+                    <!--
                     <a data-role="button" id="calendarButton" href="#calendarPage" data-icon="grid">Calendar</a>
                     <a data-role="button" id="timeTrackerButton" href="#timeTrackerPage" data-icon="gear">Time Tracker</a>
                     <a data-role="button" id="notepadButton" href="#notepadPage" data-icon="info">Notepad</a>
+                    -->
                     <a data-role="button" id="aboutVimatButton" href="#aboutVimatPage" data-icon="info">about vimat</a>
+                    <!--
                     <a data-role="button" id="exitButton" data-icon="delete">Exit</a>
+                    -->
                 </div>
             </div>
 				<div data-role="footer" id="mainFooter">
@@ -66,10 +70,12 @@
             <div data-role="content">
                 <div data-role="controlgroup" id="listsButtonGroup">
                     <a data-role="button" id="taskListButton" rel="external" href="tasks/tasks.html">Tasks</a>
+                    <!--
                     <a data-role="button" id="projectListButton" href="#listPage">Projects</a>
                     <a data-role="button" id="contextListButton" href="#listPage">Contexts</a>
                     <a data-role="button" id="tagListButton" href="#listPage">Tags</a>
                     <a data-role="button" id="userListButton" href="#listPage">Users</a>
+                    -->
                     <a data-role="button" id="exitListsPageButton" href="#mainMenuPage">Main Menu</a>
                 </div>
             </div>
