--- a/VIMAT_JavaScript/tasks/tasks.html
+++ b/VIMAT_JavaScript/tasks/tasks.html
@@ -83,6 +83,13 @@
         		</td>
     		</tr>
 		</table>
+	    <select id="repeat">
+		    <option value=n selected="selected">none</option>
+		    <option value=a>annual</option>
+		    <option value=m>monthly</option>
+		    <option value=w>weekly</option>
+		    <option value=d>daily</option>
+	    </select>
 		<select id="new-task-civlife">
 			<option value="growth" style="color:green">Growth</option>
 			<option value="science" style="color:blue">Science</option>
