--- a/VIMAT_JavaScript/tasks/tasks.html
+++ b/VIMAT_JavaScript/tasks/tasks.html
@@ -17,70 +17,71 @@
       <h1>Tasks</h1>
     </div>
     <div id="taskinputs">
-      <input id="new-task" type="text" placeholder="new task description">
-<!--      <input id="new-task-civlife" type="text" placeholder="CivLife"> -->
-        <!--Due date:<input type="date" id="duedate">-->
+        <input id="new-task" type="text" placeholder="new task description">
 		<table>
     		<tr>
         		<td>
-        		    <select id="year">
-        			    <option value=2013 selected="selected">2013</option>
-        			    <option value=2014>2014</option>
-        			    <option value=2015>2015</option>
-        			    <option value=2016>2016</option>
-        			    <option value=2017>2017</option>
-        		    </select>
+        		    <input type="number" id="year" min="2013" max="2100">
+        		    <!--<select id="year">-->
+        			   <!-- <option value=2013>2013</option>-->
+        			   <!-- <option value=2014>2014</option>-->
+        			   <!-- <option value=2015>2015</option>-->
+        			   <!-- <option value=2016>2016</option>-->
+        			   <!-- <option value=2017>2017</option>-->
+        		    <!--</select>-->
         		</td>
         		<td>
-            		<select id="month">
-            			<option value=1>January</option>
-            			<option value=2>February</option>
-            			<option value=3>March</option>
-            			<option value=4>April</option>
-            			<option value=5>May</option>
-            			<option value=6>June</option>
-            			<option value=7>July</option>
-            			<option value=8>August</option>
-            			<option value=9>September</option>
-            			<option value=10>October</option>
-            			<option value=11 selected="selected">November</option>
-            			<option value=12>December</option>
-            		</select>
+        		    <input type="number" id="month" min="1" max="12">
+            		<!--<select id="month">-->
+            		<!--	<option value=1>January</option>-->
+            		<!--	<option value=2>February</option>-->
+            		<!--	<option value=3>March</option>-->
+            		<!--	<option value=4>April</option>-->
+            		<!--	<option value=5>May</option>-->
+            		<!--	<option value=6>June</option>-->
+            		<!--	<option value=7>July</option>-->
+            		<!--	<option value=8>August</option>-->
+            		<!--	<option value=9>September</option>-->
+            		<!--	<option value=10>October</option>-->
+            		<!--	<option value=11>November</option>-->
+            		<!--	<option value=12>December</option>-->
+            		<!--</select>-->
         		</td>
         		<td>
-            		<select id="day">
-            			<option value=1>1</option>
-            			<option value=2>2</option>
-            			<option value=3>3</option>
-            			<option value=4>4</option>
-            			<option value=5>5</option>
-            			<option value=6>6</option>
-            			<option value=7>7</option>
-            			<option value=8>8</option>
-            			<option value=9>9</option>
-            			<option value=10>10</option>
-            			<option value=11>11</option>
-            			<option value=12>12</option>
-            			<option value=13>13</option>
-            			<option value=14>14</option>
-            			<option value=15>15</option>
-            			<option value=16>16</option>
-            			<option value=17>17</option>
-            			<option value=18>18</option>
-            			<option value=19 selected="selected">19</option>
-            			<option value=20>20</option>
-            			<option value=21>21</option>
-            			<option value=22>22</option>
-            			<option value=23>23</option>
-            			<option value=24>24</option>
-            			<option value=25>25</option>
-            			<option value=26>26</option>
-            			<option value=27>27</option>
-            			<option value=28>28</option>
-            			<option value=29>29</option>
-            			<option value=30>30</option>
-            			<option value=31>31</option>
-            		</select>
+        		    <input type="number" id="day" min="1" max="31">
+            		<!--<select id="day">-->
+            		<!--	<option value=1>1</option>-->
+            		<!--	<option value=2>2</option>-->
+            		<!--	<option value=3>3</option>-->
+            		<!--	<option value=4>4</option>-->
+            		<!--	<option value=5>5</option>-->
+            		<!--	<option value=6>6</option>-->
+            		<!--	<option value=7>7</option>-->
+            		<!--	<option value=8>8</option>-->
+            		<!--	<option value=9>9</option>-->
+            		<!--	<option value=10>10</option>-->
+            		<!--	<option value=11>11</option>-->
+            		<!--	<option value=12>12</option>-->
+            		<!--	<option value=13>13</option>-->
+            		<!--	<option value=14>14</option>-->
+            		<!--	<option value=15>15</option>-->
+            		<!--	<option value=16>16</option>-->
+            		<!--	<option value=17>17</option>-->
+            		<!--	<option value=18>18</option>-->
+            		<!--	<option value=19>19</option>-->
+            		<!--	<option value=20>20</option>-->
+            		<!--	<option value=21>21</option>-->
+            		<!--	<option value=22>22</option>-->
+            		<!--	<option value=23>23</option>-->
+            		<!--	<option value=24>24</option>-->
+            		<!--	<option value=25>25</option>-->
+            		<!--	<option value=26>26</option>-->
+            		<!--	<option value=27>27</option>-->
+            		<!--	<option value=28>28</option>-->
+            		<!--	<option value=29>29</option>-->
+            		<!--	<option value=30>30</option>-->
+            		<!--	<option value=31>31</option>-->
+            		<!--</select>-->
         		</td>
     		</tr>
 		</table>
@@ -92,17 +93,15 @@
 		    <option value=d>daily</option>
 	    </select>
 		<select id="new-task-civlife">
-			<option value="growth" style="color:green">Growth</option>
-			<option value="science" style="color:blue">Science</option>
-			<option value="gold" style="color:gold">Gold</option>
-			<option value="culture" style="color:pink">Culture</option>
-			<option value="defense" style="color:grey">Defense</option>
-			<option value="wonders" style="color:purple">Wonders</option>
+			<option value="growth">Growth</option>
+			<option value="science">Science</option>
+			<option value="gold">Gold</option>
+			<option value="culture">Culture</option>
+			<option value="defense" selected="selected">Defense</option>
+			<option value="wonders">Wonders</option>
 		</select>
 	</div>
     <div data-role="content" id="main">
-<!--      <input id="toggle-all" type="checkbox">
-      <label for="toggle-all">Mark all as complete</label>-->
 	<form>
 		<ul data-role="listview">
 			<li data-role="fieldcontain">
