--- a/VIMAT_JavaScript/index.html
+++ b/VIMAT_JavaScript/index.html
@@ -34,7 +34,7 @@
     <head>
        <title>VIMAT</title>
        <meta name="viewport" content="width=device-width, initial-scale=1">
-		 <link rel="stylesheet" href="jquery.mobile-1.2.0.min.css" />
+		 <link rel="stylesheet" href="jquery.mobile-1.2.0.css" />
 		 <script src="backbone-master/test/vendor/jquery-1.7.1.js"></script>
 		 <script src="jquery.mobile-1.2.0.min.js"></script>
 	<link rel="icon" type="image/ico" href="favicon.ico"/>
