added toString for sharing

--- a/VIMAT_JavaScript/index.html
+++ b/VIMAT_JavaScript/index.html
@@ -2,7 +2,7 @@
 
 <!--
 	******************************************************************
-	 Copyright 2012 Nicholas Warner
+	 Copyright 2013 Nicholas Warner
 
 	 This file is part of VIMAT.
 
@@ -11,7 +11,7 @@
     the Free Software Foundation, either version 3 of the License, or
     (at your option) any later version.
 
-    freeIPE is distributed in the hope that it will be useful,
+    VIMAT is distributed in the hope that it will be useful,
     but WITHOUT ANY WARRANTY; without even the implied warranty of
     MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
     GNU General Public License for more details.
@@ -19,14 +19,6 @@
     You should have received a copy of the GNU General Public License
     along with VIMAT.  If not, see <http://www.gnu.org/licenses/>.
 	******************************************************************
-
-	This is a jQuery Mobile UI made using Intel's Rapid Interface Builder (RIB)
-	https://01.org/rib/online/
-	RIB is licensed under Apache Software License v.2.0 which is GPL compatible
-		according to http://www.gnu.org/licenses/license-list.html .
-
-	Rewrote parts of Todos app to look more like jQuery Mobile
-
 -->
 
 <html>
@@ -47,15 +39,15 @@
             </div>
             <div data-role="content">
                 <div data-role="controlgroup" id="mainButtonGroup">
-                    <a data-role="button" id="listsButton" href="#listsMenuPage" data-icon="check">Lists</a>
+                    <a data-role="button" id="listsButton" href="#listsMenuPage">Lists</a>
                     <!--
-                    <a data-role="button" id="calendarButton" href="#calendarPage" data-icon="grid">Calendar</a>
-                    <a data-role="button" id="timeTrackerButton" href="#timeTrackerPage" data-icon="gear">Time Tracker</a>
-                    <a data-role="button" id="notepadButton" href="#notepadPage" data-icon="info">Notepad</a>
+                    <a data-role="button" id="calendarButton" href="#calendarPage">Calendar</a>
+                    <a data-role="button" id="timeTrackerButton" href="#timeTrackerPage">Time Tracker</a>
+                    <a data-role="button" id="notepadButton" href="#notepadPage">Notepad</a>
                     -->
-                    <a data-role="button" id="aboutVimatButton" href="#aboutVimatPage" data-icon="info">about vimat</a>
+                    <a data-role="button" id="aboutVimatButton" href="#aboutVimatPage">about vimat</a>
                     <!--
-                    <a data-role="button" id="exitButton" data-icon="delete">Exit</a>
+                    <a data-role="button" id="exitButton">Exit</a>
                     -->
                 </div>
             </div>
