--- a/VIMAT_JavaScript/tasks/tasks.html
+++ b/VIMAT_JavaScript/tasks/tasks.html
@@ -18,82 +18,29 @@
       <h1>Tasks</h1>
     </div>
     <div id="taskinputs">
-        <input id="new-task" type="text" placeholder="new task description">
+        <textarea id="new-task" placeholder="new task description"></textarea>
+        <input id="contextinput" type="text" placeholder="new task context">
 		<table>
     		<tr>
         		<td>
         		    <input type="number" id="year" min="2013" max="2100">
-        		    <!--<select id="year">-->
-        			   <!-- <option value=2013>2013</option>-->
-        			   <!-- <option value=2014>2014</option>-->
-        			   <!-- <option value=2015>2015</option>-->
-        			   <!-- <option value=2016>2016</option>-->
-        			   <!-- <option value=2017>2017</option>-->
-        		    <!--</select>-->
         		</td>
         		<td>
         		    <input type="number" id="month" min="1" max="12">
-            		<!--<select id="month">-->
-            		<!--	<option value=1>January</option>-->
-            		<!--	<option value=2>February</option>-->
-            		<!--	<option value=3>March</option>-->
-            		<!--	<option value=4>April</option>-->
-            		<!--	<option value=5>May</option>-->
-            		<!--	<option value=6>June</option>-->
-            		<!--	<option value=7>July</option>-->
-            		<!--	<option value=8>August</option>-->
-            		<!--	<option value=9>September</option>-->
-            		<!--	<option value=10>October</option>-->
-            		<!--	<option value=11>November</option>-->
-            		<!--	<option value=12>December</option>-->
-            		<!--</select>-->
         		</td>
         		<td>
         		    <input type="number" id="day" min="1" max="31">
-            		<!--<select id="day">-->
-            		<!--	<option value=1>1</option>-->
-            		<!--	<option value=2>2</option>-->
-            		<!--	<option value=3>3</option>-->
-            		<!--	<option value=4>4</option>-->
-            		<!--	<option value=5>5</option>-->
-            		<!--	<option value=6>6</option>-->
-            		<!--	<option value=7>7</option>-->
-            		<!--	<option value=8>8</option>-->
-            		<!--	<option value=9>9</option>-->
-            		<!--	<option value=10>10</option>-->
-            		<!--	<option value=11>11</option>-->
-            		<!--	<option value=12>12</option>-->
-            		<!--	<option value=13>13</option>-->
-            		<!--	<option value=14>14</option>-->
-            		<!--	<option value=15>15</option>-->
-            		<!--	<option value=16>16</option>-->
-            		<!--	<option value=17>17</option>-->
-            		<!--	<option value=18>18</option>-->
-            		<!--	<option value=19>19</option>-->
-            		<!--	<option value=20>20</option>-->
-            		<!--	<option value=21>21</option>-->
-            		<!--	<option value=22>22</option>-->
-            		<!--	<option value=23>23</option>-->
-            		<!--	<option value=24>24</option>-->
-            		<!--	<option value=25>25</option>-->
-            		<!--	<option value=26>26</option>-->
-            		<!--	<option value=27>27</option>-->
-            		<!--	<option value=28>28</option>-->
-            		<!--	<option value=29>29</option>-->
-            		<!--	<option value=30>30</option>-->
-            		<!--	<option value=31>31</option>-->
-            		<!--</select>-->
         		</td>
     		</tr>
 		</table>
-	    <select id="repeat">
+	    <select id="repeat" data-icon="false">
 		    <option value=n selected="selected">none</option>
 		    <option value=a>annual</option>
 		    <option value=m>monthly</option>
 		    <option value=w>weekly</option>
 		    <option value=d>daily</option>
 	    </select>
-		<select id="new-task-civlife">
+		<select id="new-task-civlife" data-icon="false">
 			<option value="growth">Growth</option>
 			<option value="science">Science</option>
 			<option value="gold">Gold</option>
@@ -114,8 +61,10 @@
     </div>
 
     <div data-role="footer" data-position="fixed" id="tasksFooter">
-      <a data-role="button" id="clear-completed">Clear completed</a>
-		<a data-role="button" id="new-task-button">Add task</a> 
+      <a data-role="button" id="clear-completed">Clear Completed</a>
+		<a data-role="button" id="new-task-button">Add Task</a>
+		<a data-role="button" id="display-taskstrings-button">Display Task(s) As Text</a>
+        <a data-role="button" id="create-task-from-text">Create Task(s) From Text</a>
 		<a data-role="button" rel="external" href="../index.html">Back</a>
 		<!--Add something to switch to tickler/future tasks-->
       <div id="task-count"></div>
