new files for MVC

--- a/VIMAT_JavaScript/index.html
+++ b/VIMAT_JavaScript/index.html
@@ -26,10 +26,10 @@
     <head>
        <title>VIMAT</title>
        <meta name="viewport" content="width=device-width, initial-scale=1">
-		 <link rel="stylesheet" href="jquery.mobile-1.2.0.css" />
-		 <script src="backbone-master/test/vendor/jquery-1.7.1.js"></script>
-		 <script src="jquery.mobile-1.2.0.min.js"></script>
-	<link rel="icon" type="image/ico" href="favicon.ico"/>
+		 <link rel="stylesheet" href="lib/jquery.mobile-1.2.0.css" />
+		 <script src="lib/backbone-master/test/vendor/jquery-1.7.1.js"></script>
+		 <script src="lib/jquery.mobile-1.2.0.min.js"></script>
+	<link rel="icon" type="image/ico" href="res/favicon.ico"/>
     </head>
     
     <body>
@@ -45,7 +45,8 @@
                     <a data-role="button" id="timeTrackerButton" href="#timeTrackerPage">Time Tracker</a>
                     <a data-role="button" id="notepadButton" href="#notepadPage">Notepad</a>
                     -->
-                    <a data-role="button" id="aboutVimatButton" href="#aboutVimatPage">about vimat</a>
+                    <a data-role="button" id="aboutVimatButton" href="#aboutVimatPage"
+                        >about vimat</a>
                     <!--
                     <a data-role="button" id="exitButton">Exit</a>
                     -->
