beautifying UI uglifying code

--- a/VIMAT_JavaScript/index.html
+++ b/VIMAT_JavaScript/index.html
@@ -62,7 +62,10 @@
             </div>
             <div data-role="content">
                 <div data-role="controlgroup" id="listsButtonGroup">
-                    <a data-role="button" id="taskListButton" rel="external" href="tasks/tasks.html">Tasks</a>
+                    <a data-role="button" id="taskListButton" rel="external" href="tasks/tasks.html">Tasks by Date</a>
+                    <a data-role="button" id="taskbyCatListButton" rel="external" href="taskscivlife/tasks.html">Tasks by Category</a>
+                    <a data-role="button" id="newtasksButton" rel="external" href="newtasks/tasks.html">New Tasks</a>
+                    <!--<a data-role="button" id="edittasksButton" rel="external" href="edittasks/tasks.html">Edit Tasks</a>-->
                     <!--
                     <a data-role="button" id="projectListButton" href="#listPage">Projects</a>
                     <a data-role="button" id="contextListButton" href="#listPage">Contexts</a>
