--- a/VIMAT_JavaScript/taskscivlife/tasks.html
+++ b/VIMAT_JavaScript/taskscivlife/tasks.html
@@ -15,7 +15,7 @@
   <div data-role="page" id="taskapp" data-title="Tasks Page">
 
     <div data-role="header" data-position="fixed" id="tasksHeader">
-      <h1>Tasks by Date</h1>
+      <h1>Tasks by Category</h1>
     </div>
     <div data-role="content" id="main">
 	<!--<form>-->
