adding some color

--- a/VIMAT/index.html
+++ b/VIMAT/index.html
@@ -26,6 +26,8 @@
     <head>
 
         <title>vimat</title>
+        <link rel="icon" type="image/png" href="resources/rosiefavicon.png">
+        <link rel="stylesheet" type="text/css" href="vimat.css">
         <script src="utilities.js"></script>
         <script src="model.js"></script>
         <script src="view.js"></script>
