--- a/VIMAT/index.html
+++ b/VIMAT/index.html
@@ -45,11 +45,17 @@
         <h2 onclick="ticklerHeaderClicked()">Tickler</h2>
         <div id="ticklerTool"></div>
         
-        <h2 onclick="projectListHeaderClicked()">Project List</h2>
-        <div id="projectListTool"></div>
+        <h2 onclick="compassHeaderClicked()">Compass</h2>
+        <div id="compassTool"></div>
+
+        <h2 onclick="notesHeaderClicked()">Notes</h2>
+        <div id="notesTool"></div>
+
+        <!--<h2 onclick="projectListHeaderClicked()">Project List</h2>-->
+        <!--<div id="projectListTool"></div>-->
         
-        <h2 onclick="CalendarHeaderClicked()">Calendar</h2>
-        <div id="calendarTool"></div>
+        <!--<h2 onclick="calendarHeaderClicked()">Calendar</h2>-->
+        <!--<div id="calendarTool"></div>-->
 
 
     </body>
