--- a/VIMAT/index.html
+++ b/VIMAT/index.html
@@ -45,7 +45,7 @@
         <h2 onclick="ticklerHeaderClicked()">Tickler</h2>
         <div id="ticklerTool"></div>
         
-        <h2 onclick="compassHeaderClicked()">Compass</h2>
+        <h2 onclick="compassHeaderClicked()">Compass/Timetracker</h2>
         <div id="compassTool"></div>
 
         <h2 onclick="notesHeaderClicked()">Notes</h2>
