--- a/vimatTest/unitTests.html
+++ b/vimatTest/unitTests.html
@@ -1,23 +1,25 @@
 <!DOCTYPE html>
+
 <html>
-<head>
-  <meta charset="utf-8">
-  <title>vimat Test Suite</title>
-  <link rel="stylesheet" href="//code.jquery.com/qunit/qunit-1.15.0.css">
-  <script src="//code.jquery.com/qunit/qunit-1.15.0.js"></script>
-  <script src="../vimat/js/utilities.js"></script>
-  <script src="../vimat/js/settings.js"></script>
-  <script src="../vimat/vimat.js"></script>
-  <script src="../vimat/js/model/model.js"></script>
-  <script src="../vimat/js/lists.js"></script>
-  <script src="../vimat/js/model/tasks.js"></script>
-  <script src="../vimat/js/history.js"></script>
-  <script src="listsTest.js"></script>
-  <script src="tasksTest.js"></script>
-  <script src="utilitiesTest.js"></script>
-</head>
-<body>
-  <div id="qunit"></div>
-  <div id="qunit-fixture"></div>
-</body>
+  <head>
+    <meta charset="utf-8">
+    <title>vimat Test Suite</title>
+    <link rel="stylesheet" href="//code.jquery.com/qunit/qunit-1.18.0.css">
+  </head>
+  <body>
+    <div id="qunit"></div>
+    <div id="qunit-fixture"></div>
+    
+    <script src="//code.jquery.com/qunit/qunit-1.18.0.js"></script>
+    <script src="../VIMAT/js/utilities.js"></script>
+    <script src="../VIMAT/js/settings.js"></script>
+    <script src="../VIMAT/vimat.js"></script>
+    <script src="../VIMAT/js/model.js"></script>
+    <script src="../VIMAT/js/lists.js"></script>
+    <script src="../VIMAT/js/tasks.js"></script>
+    <script src="../VIMAT/js/history.js"></script>
+    <script src="listsTest.js"></script>
+    <script src="tasksTest.js"></script>
+    <script src="utilitiesTest.js"></script>
+  </body>
 </html>
