added collapsible subfolders using recursion

--- a/VIMAT/index.html
+++ b/VIMAT/index.html
@@ -66,7 +66,7 @@
                     <option value="finished">finished</option>
                     <!-- Add options for history stats by grouped property -->
                 </select>
-                Group by: <select id ="groupBySelect">
+                Group by: <select id="groupBySelect">
                     <option value="none">(no grouping)</option>
                     <option value="folder">folder</option>
                     <option value="context">context</option>
@@ -97,10 +97,10 @@
           <div id="listOfListsTool"></div>
         </section>
     
-        <section class="tool">
-            <h2><a href="mobile/index.html">vimat mobile</a></h2>
-            <div id="listOfListsTool"></div>
-        </section>
+        <!--<section class="tool">-->
+        <!--    <h2><a href="mobile/index.html">vimat mobile</a></h2>-->
+        <!--    <div id="listOfListsTool"></div>-->
+        <!--</section>-->
     
         <script src="js/utilities.js"></script>
         <script src="js/settings.js"></script>
