--- a/vimatTest/unitTests.html
+++ b/vimatTest/unitTests.html
@@ -21,5 +21,6 @@
     <script src="listsTest.js"></script>
     <script src="tasksTest.js"></script>
     <script src="utilitiesTest.js"></script>
+    <script src="historyTest.js"></script>
   </body>
 </html>
