--- a/vimatTest/unitTests.html
+++ b/vimatTest/unitTests.html
@@ -14,13 +14,13 @@
     <script src="../VIMAT/js/utilities.js"></script>
     <script src="../VIMAT/js/settings.js"></script>
     <script src="../VIMAT/vimat.js"></script>
-    <script src="../VIMAT/js/model.js"></script>
-    <script src="../VIMAT/js/lists.js"></script>
+    <!--<script src="../VIMAT/js/model.js"></script>-->
+    <!--<script src="../VIMAT/js/lists.js"></script>-->
     <script src="../VIMAT/js/tasks.js"></script>
-    <script src="../VIMAT/js/history.js"></script>
-    <script src="listsTest.js"></script>
+    <!--<script src="../VIMAT/js/history.js"></script>-->
+    <!--<script src="listsTest.js"></script>-->
     <script src="tasksTest.js"></script>
     <script src="utilitiesTest.js"></script>
-    <script src="historyTest.js"></script>
+    <!--<script src="historyTest.js"></script>-->
   </body>
 </html>
