added button to timetracker

--- a/VIMAT/index.html
+++ b/VIMAT/index.html
@@ -46,6 +46,7 @@
         <link rel="icon" type="image/png" href="resources/rosiefavicon.png"/>
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="//code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.css">
+        <link rel="stylesheet" href="vimat.css">
         <script src="//code.jquery.com/jquery-1.11.2.min.js"></script>
         <script src="//code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.js"></script>
     </head>
@@ -247,6 +248,8 @@
         <script src="js/util/jqm.js"></script>
         <script src="js/util/context.js"></script>
         <script src="js/util/array.js"></script>
+        <script src="js/util/string.js"></script>
+        <script src="js/util/datetime.js"></script>
         <script src="js/settings.js"></script>
         <script src="js/core/tasks/task.js"></script>
         <script src="js/core/samples/sampletasks.js"></script>
